--- a/index.html
+++ b/index.html
@@ -1,37 +1,49 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Aneeqa's Portfolio 😊🥀</title>
+<html>
+    <!DOCTYPE HTML>
+     <meta charset="UTF-8">
+<head lang="en">
+  <title>My Resume</title>
 </head>
-
+<hr/>
 <body>
-    <h1>This may be my first website. </h1>
-    <h2>Some of the work I've done</h2>
+    <p>
+        Objective:<br/>
+        A student of engineering and am eager
+        to develop new skills in the area of artificial intelligence
+        and machine learning to help me meet my career goals :)
+    </p>
     <hr/>
-    <a href="./public/movie-ranking.html">Movie Ranking Project</a><br/>
-    <img src="./assets/images/Screenshot 2023-07-03 232413.png" height="190"/><br/>   
-    <a href="./public/birthday-invite.html">Birthday Invite Project</a><br/>
-    
-    <img src="./assets/images/Screenshot 2023-07-03 233451.png" height="180"/>
-    <hr/>
-    <a href="./public/about.html">about</a> <br/>
-    <a href="./public/contact.html">contact</a>
+ <h2>EDUCATION:</h2>
+    <ul>
+      <li><h2>2021 - 2025(ongoing)</h2></li>
+      <h3>Lords Institute of Engineering and
+        Technology
+        B.E- Computer science(artificial
+        intelligence and machine learning)</h3>
+      <li><h2>2019 - 2021</h2></li>
+      <h3>Sujatha Junior College
+        Intermediate -MPC Stream</h3>
+    </ul>
+
+ <hr/>
+ <h2>WORK EXPERIENCE:</h2>
+  <p>2023<br/>Awarded a crowdfunding certificate and
+    completed an internship under a non-profit organisation
+  </p>
+  <hr/>
+  <h2>SKILLS:</h2>
+  <p>
+    good communication:⭐⭐⭐⭐<br/>
+    coding skills:⭐⭐⭐<br/>
+    research:⭐⭐⭐⭐
+  </p>
+  <hr/>
+  <h2>CONTACT:</h2>
+  <p>
+    +91-7794833954<br/>
+    ailover07aneeqa@gmail.com
+  </p>
+ <hr/>
 
 </body>
 </html>
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
